syntax = "proto3";

package user;

service UserServiceGrpc {
  rpc FindOne (UserById) returns (User);
}

message UserById {
  int64 user_id = 1;
}

message User {
  int64 user_id = 1;
  string user_account = 2;
  string user_salt = 3;
  repeated UserRoleType  user_roles = 4;
}

message UserRoleType {
  int64 role_id = 1;
  string role_name = 2;
  string role_description = 3;
  repeated MenuType role_menus = 4;
}

message MenuType {
  int64 menu_id = 1;
  string menu_name = 2;
  string menu_url = 3;
  string menu_prefix = 4;
  string menu_pid = 5;
}
